fix gap on right on side on mobile

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -59,7 +59,6 @@ body {
   font-family: $font-stack;
   font-weight: 300;
   background-color: $color5;
-  display:flex
 }
 
 footer {
